deployment/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    service: backend
  name: backend
  namespace: lost-university
spec:
  replicas: 1
  selector:
    matchLabels:
      service: backend
  template:
    metadata:
      annotations:
      labels:
        service: backend
    spec:
      containers:
        - image: ghcr.io/lost-university/backend:main
          name: backend
          ports:
            - name: http
              containerPort: 80
          resources:
            limits:
              cpu: "1"
              memory: 512Mi
            requests:
              cpu: 1
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: lost-university
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: http
  selector:
    service: backend
  type: ClusterIP
