deployment/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lost-university-route
  namespace: lost-university
spec:
  parentRefs:
    - name: gateway-shared-public
      namespace: kube-system
      sectionName: https-ost
  hostnames:
    - lost.university
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
        backend:
          - name: frontend
            port: 80
      - path:
          type: PathPrefix
          value: /api
        backend:
          - name: backend
            port: 80
