deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lost-university-ingress
  namespace: lost-university
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http01-prod

spec:
  ingressClassName: nginx
  rules:
    - host: lost.university
      http:
        paths:
          - backend:
              service:
                name: frontend
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - lost.university
      secretName: lost-university-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lost-university-ingress-api
  namespace: lost-university
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http01-prod
spec:
  ingressClassName: nginx
  rules:
    - host: lost.university
      http:
        paths:
          - backend:
              service:
                name: backend
                port:
                  number: 80
            path: /api(/|$)(.*)
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - lost.university
      secretName: lost-university-tls
