deployment/cnp.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default-deny
  namespace: lost-university
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: envoy-gateway-system
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: frontend
  namespace: lost-university
spec:
  endpointSelector:
    matchLabels:
      service: frontend
  egress:
    - toEndpoints:
        - matchLabels:
            service: backend
    - toEntities:
        - world
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: backend
  namespace: lost-university
spec:
  endpointSelector:
    matchLabels:
      service: backend
  egress:
    - toFQDNs:
        - matchName: api.clerk.com
      toPorts:
        - ports:
            - port: "443"
    - toEndpoints:
        - matchLabels:
            postgres-operator.crunchydata.com/cluster: lost-university-postgres
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: postgres
  namespace: lost-university
spec:
  endpointSelector:
    matchLabels:
      postgres-operator.crunchydata.com/cluster: lost-university-postgres
      postgres-operator.crunchydata.com/instance-set: instance1
  ingress:
    - fromEndpoints:
        - matchLabels:
            service: backend
  egress:
    - toEntities:
        - kube-apiserver
